# Master-Internship

./: .RData  .gitignore  LICENSE.md  README.md  data_handler.R  data_handler.py  main.py  model.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
Project/: data_handler.R  data_handler.py  main.py  model.py  train.py  training.py
analysis/: data_analysis.html  heartcell_atlas.ipynb
analysis/.ipynb_checkpoints/: heartcell_atlas-checkpoint.ipynb
config/: autoencoder.json  autoencoder_dev.json  autoencoder_test.json  variational_autoencoder.json  variational_autoencoder_dev.json  variational_autoencoder_test.json
config/autoencoders/: autoencoder_activation1.json  autoencoder_activation2.json  autoencoder_activation3.json  autoencoder_latent_100.json  autoencoder_latent_200.json  autoencoder_latent_300.json  autoencoder_loss1.json  autoencoder_loss2.json  autoencoder_lr1.json  autoencoder_lr2.json  (+5 more)
data/: adata_1000x1000_sample.h5ad  adata_1000x1000_sample_normalized.h5ad  adata_normalized_sample.h5ad  hyperparameters.ini  model_config.ini  model_config_large.ini
notebooks/: ae.ipynb  ae_main.ipynb  autoencoder.ipynb  autoencoder_updated.ipynb  data_overview.Rmd  data_overview.ipynb  main.ipynb  main.py  normalization.ipynb  run_normalization.py  subset.ipynb  train_ae.py  vae.ipynb  variational_autoencoder.ipynb  variational_autoencoder_updated.ipynb
resources/: pdf.py
src/: __init__.py  ae_run.ipynb  analyst.py  constants.py  data_handler.py  handler.py  main.py  normaliser.py  pdf.py  subset.py  util.py
src/model/: model.py  (+1 more)
test/: test_subset.py
(+71 files in other folders)
