    [metadata]
    name = heart_model
    description = Model for heart expression prediction
    author = Christian Kolland
    license = MIT
    license_file = LICENSE.md
    platforms = unix, linux, osx, cygwin, win32
    classifiers =
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10

    [options]
    packages =
        heart_model
    install_requires =
        anndata>=0.8
        matplotlib>=3.7
        scanpy>=1.9
        torch>=1.13
        scikit-learn>=1.2
    python_requires = >=3.10
    package_dir =
        =src
    zip_safe = no

    [options.extra_require]
    testing =
        flake8>=3.9

    [options.package.data]
    heart_model = py.typed

    [flake8]
    max-line-length = 160